osha.policy Changelog
=====================

1.4.27 (unreleased)
-------------------

- Nothing changed yet.


1.4.26 (2013-07-15)
-------------------

- Don't set 'rows' or 'start' in the SOLR fallback search if they
  already exist. [regebro]


1.4.25 (2013-06-28)
-------------------

- Use searchResults() not search() in the language fallback, to make sure
  permissions are considered [pysailor]


1.4.24 (2013-06-27)
-------------------

- remove dependency on osha.applicaitonform, dammit [pysailor]

1.4.23 (2013-06-26)
-------------------

- Fixed #7855 by making the fallback also ignore TypeErrors + not do
  the fallback think for resolveuid calls. [regebro]
- Added a shortcut for the solr language fall back search, when 
  search results are empty. [regebro]
- Made blog migration more robust [pysailor]
- Allow PressRelease in Collage in cleanup_content too #7803 [pysailor]


1.4.22 (2013-06-24)
-------------------

- Language fallback #7734
  [lregebro, reinhard, pysailor]
- Added ellipsis for teasers on homepage #7602 [deroiste]
- Comment out handle_object_willbe_translated, since we don't have LinguaLinks any more
  [pysailor]
- add collective.portlet.twitter to dependencies, refs #7781 [jure]


1.4.21 (2013-05-28)
-------------------

- #7648 Link checker: replace collective.lead with sqlalchemy for
   updating the postgres db [deroiste, pilz]


1.4.20 (2013-05-24)
-------------------

- Comment out db adapter, to restore the IDatabaseSettings config
  [deroiste, thomasw]

1.4.19 (2013-05-14)
-------------------

- #7358 set "use_email_as_login" in the portal site_properties. This
  configuration change has been manually applied to production
  already. [deroiste]
- #7376 re-enable the lc_maintenance view to fix the BIRT broken link
  reports [deroiste]
- #6914 js for seminarportal [jure]
- Don't include seminarportal.css directly in the speech_summary template to prevent KeyError: 'base_properties' (we're using css registry) #7490 [jure]

